--- a/angular.json
+++ b/angular.json
@@ -107,9 +107,20 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy"
         },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "watchlist-angular"
+  "defaultProject": "watchlist-angular",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
