--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "watchlist-angular",
   "version": "0.0.0",
   "scripts": {
+    "build": "ng build",
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test-ci": "npm run test -- --configuration production",
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
