--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -74,5 +74,5 @@ jobs:
           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
       - name: Test
         run: npm run test-ci
-      - name: Deployy
+      - name: Deploy
         run: npm run deploy
