--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -75,4 +75,6 @@ jobs:
       - name: Test
         run: npm run test-ci
       - name: Deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run deploy
