--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "build": "ng build",
-    "deploy": "ng deploy --base-href=/watchlist-angular/",
+    "deploy": "ng deploy --base-href=/watchlist-angular/ --name=\"Ahmed Abuelgasim\" --email=\"aoabuelgasim@gmail.com\" --no-silent",
     "lint": "npm run lint-sass && npm run lint-ts",
     "lint-sass": "npx stylelint \"**/*.scss\"",
     "lint-ts": "eslint \"**/*.ts\"",
