--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -11,7 +11,8 @@ jobs:
     name: Install deps
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -31,11 +32,14 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up node
+        uses: actions/setup-node@v2
         with:
           node-version: 16.13.2
-      - uses: actions/cache@v2
+      - name: Load node-modules cache
+        uses: actions/cache@v2
         id: node-modules-cache
         with:
           path: node_modules
@@ -49,11 +53,14 @@ jobs:
     needs: [deps]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up node
+        uses: actions/setup-node@v2
         with:
           node-version: 16.13.2
-      - uses: actions/cache@v2
+      - name: Load node-modules cache
+        uses: actions/cache@v2
         id: node-modules-cache
         with:
           path: node_modules
@@ -66,8 +73,14 @@ jobs:
     needs: [deps]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.13.2
+      - name: Load node-modules cache
+        uses: actions/cache@v2
         id: node-modules-cache
         with:
           path: node_modules
@@ -77,4 +90,4 @@ jobs:
       - name: Deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run deploy
+        run: npm run deploy-ci
