--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -11,10 +11,7 @@
 		"declaration-empty-line-before": null,
 		"indentation": 2,
 		"max-empty-lines": 3,
-		"no-empty-source": [
-			true, {
-			"severity": "warning"
-		}],
+		"no-empty-source": null,
 		"no-descending-specificity": null,
 		"number-leading-zero": "never",
 		"order/properties-alphabetical-order": true,
