--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "ng serve",
     "test": "ng test",
     "test-ci": "npm run test -- --configuration production",
-    "watch": "ng build --watch --configuration development"
+    "watch": "ng build --watch --configuration development",
+    "pre-mr": "npm run lint && npm run test-ci"
   },
   "private": true,
   "dependencies": {
